# taskcheck

./: .gitignore  README.md  nvim-dap.json  publish.fish  pyproject.toml  run_tests.sh
taskcheck/: __main__.py  common.py  ical.py  install.py  parallel.py  report.py  sequential.py
tests/: conftest.py  test_common.py  test_ical.py  test_main.py  test_parallel.py  test_report.py
