[project]
name = "taskcheck"
version = "0.4.0"
description = "Automatic scheduler for taskwarrior"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "appdirs>=1.4.4",
  "icalendar>=6.0.1",
  "random-unicode-emoji>=2.8",
  "requests>=2.32.3",
  "rich>=13.9.4",
]

[project.scripts]
taskcheck = "taskcheck.__main__:main"

[tool.setuptools]
license-files = []

[dependency-groups]
dev = [
    "freezegun>=1.5.2",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.1",
    "responses>=0.25.7",
]
